<resources>
    <string name="app_name">Tic_Tack_Toe</string>
    <string name="heading">Tic Tack Toe</string>
    <string name="grid">main grid</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
</resources>