<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginTop="23dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/heading"
        android:textColor="#0E0E0E"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="420dp"
        android:layout_height="600dp"
        android:contentDescription="@string/grid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/grid"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="590dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"

        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView0"
                android:layout_width="157dp"
                android:layout_height="118dp"
                android:layout_weight="1"
                android:src="@drawable/o"
                android:contentDescription="@string/todo8"
                android:onClick="playertap"
                android:padding="20dp"

                android:tag="c0" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="157dp"
                android:layout_height="118dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo7"
                android:onClick="playertap"
                android:src="@drawable/x"
                android:padding="20dp"
                android:tag="c1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="157dp"
                android:layout_height="118dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo6"
                android:onClick="playertap"
                android:padding="20dp"
                android:src="@drawable/x"
                android:tag="c2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="-20sp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="157dp"
                android:layout_height="118dp"
                android:layout_weight="1"
                android:src="@drawable/o"
                android:contentDescription="@string/todo5"
                android:onClick="playertap"
                android:padding="20dp"

                android:tag="c3"

                />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="157dp"
                android:layout_height="118dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo4"
                android:onClick="playertap"
                android:padding="20dp"
                android:src="@drawable/o"
                android:tag="c4" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="157dp"
                android:layout_height="118dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:onClick="playertap"
                android:padding="20dp"
android:src="@drawable/o"
                android:tag="c5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/imageView61"
                android:layout_width="157dp"
                android:layout_height="118dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo1"
                android:onClick="playertap"
                android:padding="20dp"
                android:src="@drawable/x"
                android:tag="c6"
                />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="157dp"
                android:layout_height="118dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo2"
                android:onClick="playertap"
                android:padding="20dp"
android:src="@drawable/o"
                android:tag="c7" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="157dp"
                android:layout_height="118dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo3"
                android:onClick="playertap"
                android:padding="20dp"
                android:src="@drawable/o"
                android:tag="c8"
               />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>